[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytermor"
dynamic = ["version"]
description = "ANSI formatted terminal output toolset"
readme = "README.md"
license = "LGPL-3.0"
requires-python = ">=3.8"
platforms = ["linux"]
keywords = ["color", "format", "console", "terminal", "ansi"]
authors = [
    { name = "Aleksandr Shavykin", email = "0.delameter@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Filters",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/delameter/pytermor"
"Bug Tracker" = "https://github.com/delameter/pytermor/issues"
"Changelog" = "https://github.com/delameter/pytermor/blob/master/CHANGES.md"

# ---------------------------------------------------------

[tool.hatch.build.targets.sdist]
include = [
    "/pytermor",
    "/tests",
]

[tool.hatch.envs.default.scripts]
version = "python -m pytermor"
importtime = "python -qX importtime -m pytermor 2> import.log && tuna import.log"

[tool.hatch.envs.test]
extra-dependencies = [
    "coverage[toml]~=6.4",
    "coveralls~=3.3",
    "flake8~=5.0",
    "pytest~=7.1",
    "sybil~=3.0",
]

[tool.hatch.envs.test.scripts]
test = "pytest"

[tool.hatch.envs.build]
extra-dependencies = [
    "build~=0.8",
    "furo~=2022.6",
    "Pillow~=9.1",
    "pydeps~=1.10",
    "PyYAML~=5.4",
    "sphinx-copybutton~=0.5",
    "sphinx-design~=0.2",
    "sphinx-toolbox~=3.3",
    "sphinx~=5.3",
    "twine~=4.0",
]

[tool.hatch.envs.build.scripts]
ex-approx = "python examples/approximate.py"
ex-list-render = "python examples/list_renderers.py"
ex-list-named = "python examples/list_named_rgb.py"
ex-render-bmark = "python examples/render_benchmark.py"
ex-terminal-bmark = "python examples/terminal_benchmark.py"
ex-terminal-mode = "python examples/terminal_color_mode.py"

[tool.hatch.version]
path = "pytermor/_version.py"

# ---------------------------------------------------------

[tool.black]
line-length = 89
target-version = ['py37']

[tool.pytest.ini_options]
testpaths = [
    "pytermor",
    "tests",
]
addopts = [
    "-p", "no:doctest",
    "--strict-config",
    "--strict-markers",
    "--maxfail", "5",
]
xfail_strict = true
markers = [
    "setup(**kwargs): override module config variables",
]

# ---------------------------------------------------------

[tool.coverage.run]
source = ["pytermor"]
branch = true
omit = [
    "*/__init__.py",
    "pytermor/__main__.py",
    "pytermor/_version.py",
    "pytermor/ansi.py:SeqIndex",
    "pytermor/cval.py",
]
relative_files = true
dynamic_context = "test_function"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "[A-Z0-9_]+ *= *((Sequence|Color|Style)\\w*\\([]' ,.\\w=[]+\\)?|[A-Z0-9_]+)(\\s*#.+)?$",
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage-report"
title = "pytermor coverage report"

# ---------------------------------------------------------
