[metadata]
name = pytermor
version = 2.0.0-dev.17
author = Aleksandr Shavykin
author_email = 0.delameter@gmail.com
description = ANSI formatted terminal output toolset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/delameter/pytermor
project_urls =
    Source = https://github.com/delameter/pytermor
    Bug Tracker = https://github.com/delameter/pytermor/issues
    Changelog = https://github.com/delameter/pytermor/blob/master/CHANGES.md
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Text Processing :: General
    Topic :: Text Processing :: Filters
license = MIT
license_files = LICENSE
keywords =
    color
    format
    console
    terminal
    ansi

[options]
python_requires = >=3.7
packages = find:
tests_require =
    pytest~=7.1.2
    coverage~=6.4.1
    PyYAML~=5.4.1

[options.extras_require]
dev =
    build
    twine

[options.packages.find]
exclude =
    tests
    tests.*

[pep8]
ignore = E402
max-line-length = 88
